--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         ],
         "cs-check": "phpcs --colors -p --standard=vendor\/cakephp\/cakephp-codesniffer\/CakePHP .\/src .\/tests",
         "cs-fix": "phpcbf --colors --standard=vendor\/cakephp\/cakephp-codesniffer\/CakePHP .\/src .\/tests",
-        "test": "phpunit --colors=always"
+        "test": "phpunit --colors=always",
+        "sass": "sass sass/main.scss webroot/css/main.css"
     },
     "prefer-stable": true,
     "config": {
